<resources xmlns:tools="http://schemas.android.com/tools">
    <!--DashBoard Values-->
    <string name="app_name">WanderLand</string>
    <string name="best_offer">Best Offer</string>
    <string name="recommended_destination">Recommended Destination</string>
    <string name="view_all">View All</string>
    <string name="popular_places">Popular Places</string>
    <!---->


    <!--Main Menu-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="view_profile">View Profile</string>
    <string name="logout">Logout</string>
    <string name="profile_title">Profile</string>
    <string name="payments_title">Payments</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="add_card">Add Card</string>
    <string name="menu_slogan">You Travel.We Secure</string>


    <!--Best Offer Card-->

    <!--Popular Places Card-->

    <!--Register Activity-->
    <string name="register_new_account">Register New Account</string>
    <string name="register">Register</string>
    <string name="sign_in_nav_text">Have an account? Sign in</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="featured_places">Featured Places</string>
    <string name="log_out_screen_msg">Are you sure?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Package Details-->
    <string name="description_package_details">Description:</string>
    <string name="price">Price: ₹</string>
    <string name="nights">Nights:</string>
    <string name="days">Days: </string>
    <string name="booking_button_text">Book</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!--CHECKOUT ACTIVITY-->
    <string name="checkout">CHECKOUT</string>
    <string name="package_selected">Package Selected</string>
    <string name="customer_details">Customer Details</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="payment_details">Payment Details</string>
    <string name="purchase">Purchase</string>
    <string name="no_of_persons">No of persons</string>


    <!--Booking-->
    <string name="fragment_progress_indicator">ProgressIndicatorFragment</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="transaction_success">Transaction Success</string>
    <string name="transaction_history">Transaction History</string>
    <string name="booking_history">Booking History</string>


    <!-- Strings for On Boarding Screen -->

    <!--Titles-->
    <string name="first_slide_title">Travel Around The World</string>
    <string name="second_slide_title">Best Deals You Cannot Refuse</string>
    <string name="third_slide_title">Privacy Our Top Priority</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>
    <!--Descriptions-->
    <string name="first_slide_desc">You can travel any place nearby or with-in the specified city,state,country. We will display specific or all related travel destinations to match your interest. </string>
    <string name="second_slide_desc">We provide best deals for you. You can perform bookings as well.</string>
    <string name="third_slide_desc">We provide best in industry security to our customers. You do not need to worry about your privacy we handle it for you while you enjoy your travel.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you donot have to worry about anything.  </string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

</resources>