<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDashBackground"
    tools:context=".LoginSignUp.RegisterUserActivity">

    <LinearLayout
        android:id="@+id/linLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="80dp"
        android:paddingRight="25dp">
        <!-- <ImageView
             android:id="@+id/backToLoginButton"
             android:layout_width="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_arrow_back"/>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/register_new_account"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailRegisterPageTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/colorBlack"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailSignUpTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameRegisterPageTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/name"
            app:boxStrokeColor="@color/colorBlack"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameSignUpTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRegisterPageTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/colorBlack"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:padding="60dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/link_logIn"
            android:layout_marginBottom="50dp"
            android:background="@drawable/blue_rounded_button"
            android:fontFamily="@font/roboto"
            android:onClick="OnRegisterClick"
            android:text="@string/register"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

    <!--  <TextView
          android:id="@+id/link_logIn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_marginTop="30dp"
          android:layout_marginBottom="40dp"
          android:fontFamily="@font/roboto"
          android:gravity="center"
          android:onClick="navigationToLogin"
          android:text="@string/sign_in_nav_text"
          android:textSize="16dp"
          android:textStyle="bold" />
  -->
</RelativeLayout>