<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDashBackground"
    tools:context=".LoginSignUp.LoginActivity">

    <!--<ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>-->

    <LinearLayout
        android:id="@+id/linLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="30dp"
        android:paddingRight="25dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="172dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/colorBlack"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/colorBlack"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/link_logIn"
        android:layout_marginBottom="10dp"
        android:padding="60dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/blue_rounded_button"
            android:fontFamily="@font/poppins"
            android:onClick="OnLogInClick"
            android:text="@string/login" />
    </LinearLayout>

    <TextView
        android:id="@+id/link_logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:onClick="navigationToRegister"
        android:text="Don't have an account? Register here"
        android:textSize="16dp"
        android:textStyle="bold" />

</RelativeLayout>