<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDashBackground"
    android:orientation="horizontal"
    tools:context=".Details.PackageDetailsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/relLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ImageSliderCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:strokeWidth="2dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="50dp">

                <com.wanderland.app.DashBoard.Helper.SquareLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imageSliderView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="20dp"
                    app:sliderAnimationDuration="1200"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="1200"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    app:sliderScrollTimeInSec="3"
                    app:sliderStartAutoCycle="true" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/DetailsCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ImageSliderCardView"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                app:strokeWidth="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:elevation="50dp"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/description_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="12dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/description_package_details"
                        android:textColor="@color/colorText"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:id="@+id/linLayoutBelowDESC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/description_textView"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/days"
                            android:textColor="@color/colorText"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/noOfDays_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/roboto"
                            android:text=""
                            android:textColor="@color/colorText"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/nights"
                            android:textColor="@color/colorText"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/noOfNights_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/roboto"
                            android:text=""
                            android:textColor="@color/colorText"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/price"
                            android:textColor="@color/colorText"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/price_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="@font/roboto"
                            android:text=""
                            android:textColor="@color/colorText"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/locations_linLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linLayoutBelowDESC"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="12dp"
                            android:background="@drawable/ic_baseline_location_on_24"
                            android:scaleType="center" />

                        <com.codesgood.views.JustifiedTextView
                            android:id="@+id/locations_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/roboto"
                            android:text=""
                            android:textColor="@color/colorText"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/package_description_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/locations_linLayout"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/roboto"
                        android:text=""
                        android:textColor="@color/colorText"
                        android:textSize="16sp" />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/book_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/blue_rounded_button"
            android:fontFamily="@font/roboto"
            android:text="@string/booking_button_text" />
    </LinearLayout>
</ScrollView>
